src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Annual_Cost__c</fullName>
        <description>T1: $38,000
T2: $42,000
Lead: $52,000
Supervisor: $64,000</description>
        <inlineHelpText>T1: $38,000
T2: $42,000
Lead: $52,000
Supervisor: $64,000</inlineHelpText>
        <label>Annual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>License_Cost__c</fullName>
        <formula>IF(UserRoleId == &apos;00E44000000ToGX&apos;,11.00,59.05)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>com_smartsheet__ShowSmartsheetIntroduction__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Controls whether a user sees the Smartsheet introduction (splash) page when they first access a Smartsheet link page, edit page, or tab.</description>
        <label>Show Smartsheet Introduction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__Enable_ZaapIT_s_Layout_Editor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable the user to change ZaapIT&apos;s Layout Editor for smart tables/update</description>
        <label>Enable ZaapIT&apos;s Layout Editor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__Enable_ZaapIT_s_View_Editor__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable ZaapIT&apos;s View Editor for none admin users</description>
        <inlineHelpText>Enable ZaapIT&apos;s View Editor for none admin users (don&apos;t mark with enable layout editor for the same user)</inlineHelpText>
        <label>Enable ZaapIT&apos;s View Editor</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>CSR_need_Cost</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISBLANK(Annual_Cost__c),
OR(
CONTAINS(Profile.Name, &apos;CSR&apos;),
CONTAINS(Profile.Name, &apos;Client Support&apos;),
CONTAINS(Profile.Name, &apos;ERT&apos;)))</errorConditionFormula>
        <errorDisplayField>Annual_Cost__c</errorDisplayField>
        <errorMessage>All Support Users need an Annual Cost</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CSR_need_Division</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISBLANK(Division),
OR(
CONTAINS(Profile.Name, &apos;CSR&apos;),
CONTAINS(Profile.Name, &apos;Client Support&apos;),
CONTAINS(Profile.Name, &apos;ERT&apos;)))</errorConditionFormula>
        <errorDisplayField>Division</errorDisplayField>
        <errorMessage>All Support Users need a Division representing what office they are in (Denver, Chicago, Etc.)</errorMessage>
    </validationRules>
</CustomObject>